@@ -3,6 +3,7 @@ remove curl dependences
 add version info in configView
 add unique column in database for messages (id_peer_id_msg_id_)
 add clear chaches in configView
+add chat scrolldown on new message
 
 1.15
 messages chaching
